# Copyright 2022 Jetperch LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# See https://peps.python.org/pep-0518/
# See https://toml.io/

[build-system]
# Minimum requirements for the build system to execute.
requires = [
    "Cython",
    "numpy",
    "pywin32; sys_platform == 'win32'",
    "setuptools",
    "wheel",
]
